# secureflow-scanner

./: .gitignore  .pre-commit-config.yaml  .secureflow.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  testfile.py
.github/workflows/: secureflow.yml
docs/: getting-started.md  index.md
secureflow/: __init__.py  cli.py
secureflow/core/: config.py  finding.py  scanner.py
secureflow/integrations/: github.py
secureflow/policy/: engine.py  loader.py
secureflow/reporting/: console.py  json_reporter.py  sarif.py
secureflow/scanners/: dependencies.py  docker.py  iac.py  secrets.py
tests/: __init__.py  conftest.py  test_dependency_scanner.py  test_docker_scanner.py  test_iac_scanner.py  test_policy_engine.py  test_reporting.py
